--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -17,7 +17,7 @@ jobs:
     strategy:
       matrix:
         python-version: [3.8]
-        distribution: [centos7, rockylinux8, ubuntu1804, ubuntu2004, ubuntu2204]
+        distribution: [centos7, rockylinux8, ubuntu2004, ubuntu2204]
     steps:
       - uses: actions/checkout@v2
         with:
