--- a/molecule/drupal8-drush/requirements.yml
+++ b/molecule/drupal8-drush/requirements.yml
@@ -6,6 +6,9 @@
 - src: geerlingguy.php
   version: 4.8.0
 
+- src: geerlingguy.php-versions
+  version: 5.0.0
+
 - src: geerlingguy.nginx
   version: 3.1.1
 
