--- a/molecule/springboot/converge.yml
+++ b/molecule/springboot/converge.yml
@@ -3,7 +3,7 @@
   hosts: instance
   become: true
   roles:
-    - role: lean_delivery.java
+    - role: lean-delivery.java
       vars:
         java_distribution: adoptopenjdk
         java_major_version: 8
