Update the patch and add the skipping checksum option

--- a/tasks/play/deploy.yml
+++ b/tasks/play/deploy.yml
@@ -26,16 +26,20 @@
   tags:
     - steamengine_deploy_play2
 
+# Setup checksum verification
 - name: Ensure non-empty checksum
   set_fact:
-    steamengine_build_checksum_verified: sha1:1
-  when: steamengine_build_checksum == ''
+    empty_checksum_check: "{{ (steamengine_build_checksum == '') | ternary('sha1:1', steamengine_build_checksum) }}"
+
+- name: Confirm the verification of the checksum
+  set_fact:
+    checksum_verified: "{{ steamengine_skip_checksum | ternary('', empty_checksum_check) }}"
 
 - name: "Download build {{ steamengine_build_url }}"
   ansible.builtin.get_url:
     url: "{{ steamengine_build_url }}"
     dest: "{{ steamengine_project_root_path }}/project.zip"
-    checksum: "{{ (steamengine_build_checksum == '') | ternary(steamengine_build_checksum_verified, steamengine_build_checksum) }}"
+    checksum: "{{ checksum_verified }}"
     owner: "{{ steamengine_project_user }}"
     group: "{{ steamengine_app_user }}"
     mode: u=rwx,g=rx,o=
