--- a/tasks/wordpress/deploy.yml
+++ b/tasks/wordpress/deploy.yml
@@ -7,7 +7,7 @@
     dest: "{{ steamengine_project_root_path }}/.env"
     owner: "{{ steamengine_project_user }}"
     group: "{{ steamengine_app_user }}"
-    mode: u=rwx,g=rx,o=
+    mode: u=rw,g=r,o=r
   tags:
     - steamengine_deploy_env
 
@@ -18,7 +18,7 @@
     checksum: "{{ checksum_verified }}"
     owner: "{{ steamengine_project_user }}"
     group: "{{ steamengine_app_user }}"
-    mode: u=rwx,g=rx,o=
+    mode: u=rw,g=rw,o=
     headers: "{{ steamengine_build_url_headers }}"
     validate_certs: "{{ steamengine_build_url_validate_certs }}"
   register: get_url_build
@@ -39,52 +39,30 @@
     - steamengine_deploy_wordpress
     - steamengine_deploy_database
 
-- name: "Create www directory"
-  ansible.builtin.file:
-    path: "{{ steamengine_project_root_path_web }}"
-    owner: "{{ steamengine_project_user }}"
-    group: "{{ steamengine_app_user }}"
-    mode: u=rwx,g=rx,o=
-    state: directory
-  tags:
-    - steamengine_deploy_wordpress
-
-- name: Clean new release directory
-  ansible.builtin.file:
-    path: "{{ steamengine_project_wordpress_new_release_path }}"
-    state: absent
-  when: new_build_to_deploy is defined and new_build_to_deploy
-
 - name: Create new release directory
   ansible.builtin.file:
     path: "{{ steamengine_project_wordpress_new_release_path }}"
     state: directory
     owner: "{{ steamengine_project_user }}"
     group: "{{ steamengine_app_user }}"
-    mode: u=rwx,g=rx,o=
+    mode: u=rw,g=rw,o=
   when: new_build_to_deploy is defined and new_build_to_deploy
 
-- name: Update www directory
-  include_tasks: include/update_from_archive.yml
-  vars:
-    archive_path: "{{ steamengine_project_root_path }}/project.zip"
-    dest_path: "{{ steamengine_project_wordpress_new_release_path }}"
+- name: Unarchive build
+  ansible.builtin.unarchive:
+    src: "{{ steamengine_project_root_path }}/project.zip"
+    dest: "{{ steamengine_project_wordpress_new_release_path }}"
+    remote_src: true
+    list_files: true
   when: new_build_to_deploy is defined and new_build_to_deploy
-  args:
-    apply:
-      tags:
-        - steamengine_deploy
-        - steamengine_deploy_wordpress
-  tags:
-    - steamengine_deploy_wordpress
 
 - name: "Add read permission for {{ steamengine_app_user }}"
   ansible.builtin.file:
-    path: "{{ steamengine_project_root_path_web }}"
+    path: "{{ steamengine_project_wordpress_new_release_path }}/"
     owner: "{{ steamengine_project_user }}"
     group: "{{ steamengine_app_user }}"
     recurse: true
-    mode: u=rwx,g=rx,o=
+    mode: u=rw,g=rw,o=
   tags:
     - steamengine_deploy_wordpress
 
@@ -99,16 +77,6 @@
     path: "{{ steamengine_project_wordpress_current_release_path }}"
   register: project_current_release_exist
   when: new_build_to_deploy is defined and new_build_to_deploy
-
-- name: Copy uploads directory from current release to home
-  ansible.builtin.copy:
-    src: "{{ steamengine_project_wordpress_current_release_path }}/web/app/uploads"
-    dest: "{{ steamengine_project_root_path }}"
-    owner: "{{ steamengine_project_user }}"
-    group: "{{ steamengine_app_user }}"
-    remote_src: true
-    mode: u=rwx,g=rx,o=
-  when: new_build_to_deploy is defined and new_build_to_deploy and not project_uploads_directory_exist.stat.exists and project_current_release_exist.stat.exists
 
 - name: "Ensure {{ steamengine_project_wordpress_uploads_path }} has the right permissions"
   ansible.builtin.file:
@@ -129,8 +97,23 @@
   with_items: "{{ steamengine_project_wordpress_symlinks }}"
   when: new_build_to_deploy is defined and new_build_to_deploy
 
+- name: Clean old release directory
+  ansible.builtin.file:
+    path: "{{ steamengine_project_wordpress_old_release_path }}"
+    state: absent
+  when: new_build_to_deploy is defined and new_build_to_deploy
+
+- name: Create old release directory
+  ansible.builtin.file:
+    path: "{{ steamengine_project_wordpress_old_release_path }}"
+    state: directory
+    owner: "{{ steamengine_project_user }}"
+    group: "{{ steamengine_app_user }}"
+    mode: u=rw,g=rw,o=
+  when: new_build_to_deploy is defined and new_build_to_deploy
+
 - name: Move current release to old release
-  ansible.builtin.command: "mv {{ steamengine_project_wordpress_current_release_path }} {{ steamengine_project_wordpress_old_release_path }}"
+  ansible.builtin.command: "rsync --remove-source-files --chown{{ steamengine_project_user }}:{{ steamengine_app_user }} {{ steamengine_project_wordpress_current_release_path }} {{ steamengine_project_wordpress_old_release_path }}"
   when: new_build_to_deploy is defined and new_build_to_deploy and project_current_release_exist.stat.exists
 
 - name: Switch symlink on old release
@@ -142,14 +125,8 @@
     group: "{{ steamengine_app_user }}"
   when: new_build_to_deploy is defined and new_build_to_deploy and project_current_release_exist.stat.exists
 
-- name: Clean old release directory
-  ansible.builtin.file:
-    path: "{{ steamengine_project_wordpress_old_release_path }}"
-    state: absent
-  when: new_build_to_deploy is defined and new_build_to_deploy
-
 - name: Move next release to current release
-  ansible.builtin.command: "mv {{ steamengine_project_wordpress_new_release_path }} {{ steamengine_project_wordpress_current_release_path }}"
+  ansible.builtin.command: "rsync --remove-source-files --chown{{ steamengine_project_user }}:{{ steamengine_app_user }} {{ steamengine_project_wordpress_new_release_path }} {{ steamengine_project_wordpress_current_release_path }}"
   when: new_build_to_deploy is defined and new_build_to_deploy
 
 - name: Switch symlink on the new current release
@@ -159,4 +136,19 @@
     state: link
     owner: "{{ steamengine_project_user }}"
     group: "{{ steamengine_app_user }}"
+  when: new_build_to_deploy is defined and new_build_to_deploy
+
+- name: "Ensure {{ steamengine_project_wordpress_current_release_path }} has the right permissions"
+  ansible.builtin.file:
+    path: "{{ steamengine_project_wordpress_current_release_path }}"
+    state: directory
+    mode: u=rw,g=rw,o=
+    owner: "{{ steamengine_project_user }}"
+    group: "{{ steamengine_app_user }}"
+  when: new_build_to_deploy is defined and new_build_to_deploy
+
+- name: Clean new release directory
+  ansible.builtin.file:
+    path: "{{ steamengine_project_wordpress_new_release_path }}"
+    state: absent
   when: new_build_to_deploy is defined and new_build_to_deploy
