--- a/tasks/wordpress/deploy.yml
+++ b/tasks/wordpress/deploy.yml
@@ -2,13 +2,13 @@
 
 - name: Is there a .env file
   ansible.builtin.stat:
-    path: "{{ steamengine_project_root_path }}/.env"
+    path: "{{ steamengine_conf_path }}/.env"
   register: project_env_file_exist
 
 - name: "Create .env backup file"
   ansible.builtin.copy:
-    src: "{{ steamengine_project_root_path }}/.env"
-    dest: "{{ steamengine_project_root_path }}/.env.backup"
+    src: "{{ steamengine_conf_path }}/.env"
+    dest: "{{ steamengine_conf_path }}/.env.backup"
     owner: "{{ steamengine_project_user }}"
     group: "{{ steamengine_app_user }}"
     mode: u=rw,g=r,o=r
@@ -19,7 +19,7 @@
 - name: "Create configuration file for projects"
   ansible.builtin.template:
     src: wordpress.env.j2
-    dest: "{{ steamengine_project_root_path }}/.env"
+    dest: "{{ steamengine_conf_path }}/.env"
     owner: "{{ steamengine_project_user }}"
     group: "{{ steamengine_app_user }}"
     mode: u=rw,g=r,o=r
@@ -69,22 +69,9 @@
     dest: "{{ steamengine_project_wordpress_new_release_path }}"
     remote_src: true
     list_files: true
-  when: new_build_to_deploy is defined and new_build_to_deploy
-
-- name: "Add read permission for {{ steamengine_app_user }}"
-  ansible.builtin.file:
-    path: "{{ steamengine_project_wordpress_new_release_path }}/"
     owner: "{{ steamengine_project_user }}"
     group: "{{ steamengine_app_user }}"
-    recurse: true
     mode: u=rw,g=rw,o=
-  tags:
-    - steamengine_deploy_wordpress
-
-- name: Is there a uploads directory
-  ansible.builtin.stat:
-    path: "{{ steamengine_project_wordpress_uploads_path }}"
-  register: project_uploads_directory_exist
   when: new_build_to_deploy is defined and new_build_to_deploy
 
 - name: "Is there a current release : {{ steamengine_project_wordpress_current_release_path }}"
@@ -102,15 +89,6 @@
     mode: u=rw,g=rw,o=
   when: new_build_to_deploy is defined and new_build_to_deploy and not project_current_release_exist.stat.exists
 
-- name: "Ensure {{ steamengine_project_wordpress_uploads_path }} has the right permissions"
-  ansible.builtin.file:
-    path: "{{ steamengine_project_wordpress_uploads_path }}"
-    state: directory
-    mode: u=rwx,g=rx,o=
-    owner: "{{ steamengine_project_user }}"
-    group: "{{ steamengine_app_user }}"
-  when: new_build_to_deploy is defined and new_build_to_deploy
-
 - name: Clean old release directory
   ansible.builtin.file:
     path: "{{ steamengine_project_wordpress_old_release_path }}"
@@ -125,60 +103,3 @@
     group: "{{ steamengine_app_user }}"
     mode: u=rw,g=rw,o=
   when: new_build_to_deploy is defined and new_build_to_deploy and project_current_release_exist.stat.exists
-
-- name: Move current release to old release
-  ansible.builtin.shell: "mv {{ steamengine_project_wordpress_current_release_path }}/* {{ steamengine_project_wordpress_old_release_path }}"
-  when: new_build_to_deploy is defined and new_build_to_deploy and project_current_release_exist.stat.exists
-
-- name: Remove symlink on old release
-  ansible.builtin.file:
-    path: "{{ steamengine_project_wordpress_old_release_path }}/item.symlink_src"
-    state: absent
-  with_items: "{{ steamengine_project_wordpress_symlinks }}"
-  when: new_build_to_deploy is defined and new_build_to_deploy and project_current_release_exist.stat.exists
-
-- name: "Move the .env.backup file on the old directory"
-  ansible.builtin.copy:
-    src: "{{ steamengine_project_root_path }}/.env.backup"
-    dest: "{{ steamengine_project_wordpress_old_release_path }}/.env"
-    owner: "{{ steamengine_project_user }}"
-    group: "{{ steamengine_app_user }}"
-    remote_src: yes
-    mode: u=rw,g=r,o=r
-  become: true
-  when: project_env_file_exist.stat.exists and new_build_to_deploy is defined and new_build_to_deploy
-
-- name: "Delete the .env.backup file"
-  ansible.builtin.file:
-    path: "{{ steamengine_project_root_path }}/.env.backup"
-    state: absent
-  when: project_env_file_exist.stat.exists and new_build_to_deploy is defined and new_build_to_deploy
-
-- name: Move next release to current release using mv command
-  ansible.builtin.shell: "mv {{ steamengine_project_wordpress_new_release_path }}/* {{ steamengine_project_wordpress_current_release_path }}"
-  when: new_build_to_deploy is defined and new_build_to_deploy
-
-- name: Add/Switch symlink on the new current release
-  ansible.builtin.file:
-    src: "{{ item.path }}"
-    dest: "{{ steamengine_project_wordpress_current_release_path }}/{{ item.symlink_src }}"
-    state: link
-    owner: "{{ steamengine_project_user }}"
-    group: "{{ steamengine_app_user }}"
-  with_items: "{{ steamengine_project_wordpress_symlinks }}"
-  when: new_build_to_deploy is defined and new_build_to_deploy
-
-- name: "Ensure {{ steamengine_project_wordpress_current_release_path }} has the right permissions"
-  ansible.builtin.file:
-    path: "{{ steamengine_project_wordpress_current_release_path }}"
-    state: directory
-    mode: u=rw,g=rw,o=
-    owner: "{{ steamengine_project_user }}"
-    group: "{{ steamengine_app_user }}"
-  when: new_build_to_deploy is defined and new_build_to_deploy
-
-- name: Clean new release directory
-  ansible.builtin.file:
-    path: "{{ steamengine_project_wordpress_new_release_path }}"
-    state: absent
-  when: new_build_to_deploy is defined and new_build_to_deploy
