--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -84,8 +84,10 @@
   tags: always
 
 - name: Check if steamengine_project_type/post_deploy.yml exists
+  delegate_to: localhost
   ansible.builtin.stat:
-    path: "{{ steamengine_project_type }}/post_deploy.yml"
+    path: "{{ lookup('ansible.builtin.fileglob', role_path + '/tasks/' + steamengine_project_type + '/post_deploy.yml') }}"
+  become: false
   register: steamengine_post_deploy_check
 
 - include_tasks:
