--- a/tasks/wordpress/deploy.yml
+++ b/tasks/wordpress/deploy.yml
@@ -74,6 +74,17 @@
     mode: u=rw,g=rw,o=
   when: new_build_to_deploy is defined and new_build_to_deploy
 
+- name: Create symlink new release
+  ansible.builtin.file:
+    src: "{{ item.symlink_src }}"
+    dest: "{{ item.path }}"
+    state: link
+    owner: "{{ steamengine_project_user }}"
+    group: "{{ steamengine_app_user }}"
+    mode: u=rw,g=rw,o=
+  with_items: "{{ steamengine_project_wordpress_symlinks }}"
+  when: new_build_to_deploy is defined and new_build_to_deploy
+
 - name: "Is there a current release : {{ steamengine_project_wordpress_current_release_path }}"
   ansible.builtin.stat:
     path: "{{ steamengine_project_wordpress_current_release_path }}"
