--- a/vars/wordpress.yml
+++ b/vars/wordpress.yml
@@ -9,23 +9,39 @@ steamengine_project_wordpress_symlinks:
 
 # WORDPRESS
 steamengine_wrapper_scripts_base:
-  - name: start
+  - name: start-php
+    description: Start php-fpm
+    command: |
+      systemctl start {{ (ansible_os_family == 'Debian') | ternary(steamengine_php_fpm_service_name, 'php-fpm') }}
+  - name: stop-php
+    description: Stop php-fpm and http server
+    command: |
+      systemctl stop {{ (ansible_os_family == 'Debian') | ternary(steamengine_php_fpm_service_name, 'php-fpm') }}
+  - name: restart-php
+    description: Restart php-fpm and http server
+    command: |
+      systemctl restart {{ (ansible_os_family == 'Debian') | ternary(steamengine_php_fpm_service_name, 'php-fpm') }}
+  - name: status-php
+    description: Display php-fpm and http server status
+    command: |
+      systemctl status {{ (ansible_os_family == 'Debian') | ternary(steamengine_php_fpm_service_name, 'php-fpm') }}
+  - name: start-nginx
     description: Start http server
     command: |
       systemctl start nginx
-  - name: stop
+  - name: stop-nginx
     description: Stop http server
     command: |
       systemctl stop nginx
-  - name: restart
+  - name: restart-nginx
     description: Restart http server
     command: |
       systemctl restart nginx
-  - name: reload
+  - name: reload-nginx
     description: Reload http server configuration
     command: |
       systemctl reload nginx
-  - name: status
+  - name: status-nginx
     description: Display the http server status
     command: |
       systemctl status nginx
@@ -33,3 +49,28 @@ steamengine_wrapper_scripts_base:
     description: Display and follow project logs
     command: |
       tail -f {{ steamengine_logs_path }}/*.log
+  - name: fixpermissions
+    description: Restore project files and folders permissions
+    command: |
+      find -L {{ steamengine_project_root_path_web }} \
+      {% for value in steamengine_sf_path_with_write_permission %}
+        -not -path '{{ steamengine_project_root_path_web }}/{{ value }}*' \
+      {% endfor %}
+      {% for value in steamengine_persistent_directories %}
+        -not -path '/{{ steamengine_project_name }}/{{ value.symlink_src }}*' \
+      {% endfor %}
+        -not -path '{{ steamengine_project_root_path_web }}/.env.local' \
+        -print0 | xargs -0 chmod 'u=rwx,g=rx,o='
+
+      find -L {{ steamengine_project_root_path_web }} \
+        -not -path '{{ steamengine_project_root_path_web }}/.env.local' \
+        -print0 | xargs -0 chown {{ steamengine_project_user }}:{{ steamengine_app_user }}
+
+      chmod -R 'u=rwx,g=rwx,o=' \
+      {% for value in steamengine_sf_path_with_write_permission %}
+        {{ steamengine_project_root_path_web }}/{{ value }} \
+      {% endfor %}
+      {% for value in steamengine_persistent_directories %}
+        /{{ steamengine_project_name }}/{{ value.symlink_src }} \
+      {% endfor %}
+      || :
