--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -134,7 +134,7 @@ steamengine_drupal_project_setting: |
   $settings['hash_salt'] = 'ChangeMe';
   $config_directories['sync'] = '../config';
 # Directory for public file
-steamengine_drupal_public_directory: "web"
+steamengine_drupal_public_directory: "/web"
 # Url for the dump of database for an install
 steamengine_drupal_db_dump_url:
 steamengine_drupal_db_dump_url_headers: {}
