--- a/tasks/wordpress/deploy.yml
+++ b/tasks/wordpress/deploy.yml
@@ -4,6 +4,8 @@
   ansible.builtin.stat:
     path: "{{ steamengine_conf_path }}/.env"
   register: project_env_file_exist
+  tags:
+    - steamengine_deploy_wp
 
 - name: "Create .env backup file"
   ansible.builtin.copy:
@@ -15,6 +17,8 @@
     remote_src: yes
   become: true
   when: project_env_file_exist.stat.exists
+  tags:
+    - steamengine_deploy_wp
 
 - name: "Create configuration file for projects"
   ansible.builtin.template:
@@ -25,6 +29,7 @@
     mode: u=rw,g=r,o=r
   tags:
     - steamengine_deploy_env
+    - steamengine_deploy_wp
 
 - name: "Download build {{ steamengine_build_url }}"
   ansible.builtin.get_url:
@@ -38,7 +43,7 @@
     validate_certs: "{{ steamengine_build_url_validate_certs }}"
   register: get_url_build
   tags:
-    - steamengine_deploy_wordpress
+    - steamengine_deploy_wp
 
 - name: "Is there a new build: {{ get_url_build.changed }}"
   ansible.builtin.set_fact:
@@ -51,7 +56,7 @@
         - deploy
   when: new_build_to_deploy is defined and new_build_to_deploy and steamengine_project_dump_bdd_url is defined and steamengine_project_dump_bdd_url != ''
   tags:
-    - steamengine_deploy_wordpress
+    - steamengine_deploy_wp
     - steamengine_deploy_database
 
 - name: Create new release directory
@@ -60,8 +65,10 @@
     state: directory
     owner: "{{ steamengine_project_user }}"
     group: "{{ steamengine_app_user }}"
-    mode: u=rw,g=rw,o=
+    mode: u=rwx,g=rx,o=
   when: new_build_to_deploy is defined and new_build_to_deploy
+  tags:
+    - steamengine_deploy_wp
 
 - name: Unarchive build
   ansible.builtin.unarchive:
@@ -71,8 +78,10 @@
     list_files: true
     owner: "{{ steamengine_project_user }}"
     group: "{{ steamengine_app_user }}"
-    mode: u=rw,g=rw,o=
+    mode: u=rwx,g=rx,o=
   when: new_build_to_deploy is defined and new_build_to_deploy
+  tags:
+    - steamengine_deploy_wp
 
 - name: Create symlink new release
   ansible.builtin.file:
@@ -81,15 +90,19 @@
     state: link
     owner: "{{ steamengine_project_user }}"
     group: "{{ steamengine_app_user }}"
-    mode: u=rw,g=rw,o=
+    mode: u=rwx,g=rx,o=
   with_items: "{{ steamengine_project_wordpress_symlinks }}"
   when: new_build_to_deploy is defined and new_build_to_deploy
+  tags:
+    - steamengine_deploy_wp
 
 - name: "Is there a current release : {{ steamengine_project_wordpress_current_release_path }}"
   ansible.builtin.stat:
     path: "{{ steamengine_project_wordpress_current_release_path }}"
   register: project_current_release_exist
   when: new_build_to_deploy is defined and new_build_to_deploy
+  tags:
+    - steamengine_deploy_wp
 
 - name: Create current release directory
   ansible.builtin.file:
@@ -97,14 +110,18 @@
     state: directory
     owner: "{{ steamengine_project_user }}"
     group: "{{ steamengine_app_user }}"
-    mode: u=rw,g=rw,o=
+    mode: u=rwx,g=rx,o=
   when: new_build_to_deploy is defined and new_build_to_deploy and not project_current_release_exist.stat.exists
+  tags:
+    - steamengine_deploy_wp
 
 - name: Clean old release directory
   ansible.builtin.file:
     path: "{{ steamengine_project_wordpress_old_release_path }}"
     state: absent
   when: new_build_to_deploy is defined and new_build_to_deploy and project_current_release_exist.stat.exists
+  tags:
+    - steamengine_deploy_wp
 
 - name: Create old release directory
   ansible.builtin.file:
@@ -112,5 +129,7 @@
     state: directory
     owner: "{{ steamengine_project_user }}"
     group: "{{ steamengine_app_user }}"
-    mode: u=rw,g=rw,o=
+    mode: u=rwx,g=rx,o=
   when: new_build_to_deploy is defined and new_build_to_deploy and project_current_release_exist.stat.exists
+  tags:
+    - steamengine_deploy_wp
