--- a/tasks/symfony/deploy.yml
+++ b/tasks/symfony/deploy.yml
@@ -186,7 +186,7 @@
     path: "{{ steamengine_sf_log_path }}"
   when: new_build_to_deploy
   tags:
-    - steamengine_deploy_drupal
+    - steamengine_deploy_sf
 
 - name: Create logs link directory
   ansible.builtin.file:
