--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -69,6 +69,9 @@ steamengine_build_url_headers: {}
 #       delete_dir: false        # Delete the directory (if exists) before creating the symlink . False by default
 steamengine_persistent_directories: []
 
+# DB dump URL
+steamengine_project_dump_bdd_url: "{{ steamengine_project_dump_bdd_url }} | default('') }}"
+
 # NODEJS
 steamengine_nodejs_entrypoint: "bin/www"
 steamengine_nodejs_cluster_mode: true
