--- a/tasks/drupal/deploy.yml
+++ b/tasks/drupal/deploy.yml
@@ -25,11 +25,12 @@
     - steamengine_deploy_drupal
 
 - name: "Add maintenance page"
-  become: true
   ansible.builtin.copy:
     src: "files/maintenance.html"
     dest: "{{ steamengine_project_root_path }}/maintenance.html"
-    mode: "0644"
+    owner: "{{ steamengine_project_user }}"
+    group: "{{ steamengine_app_user }}"
+    mode: u=rwx,g=rx,o=
   tags:
     - steamengine_deploy
   when: new_build_to_deploy and steamengine_drupal_show_maintenance_page is defined and steamengine_drupal_show_maintenance_page|bool == true
@@ -202,10 +203,12 @@
     - steamengine_deploy_drupal
 
 - name: "Remove maintenance page"
-  become: true
   ansible.builtin.file:
     path:  "{{ steamengine_project_root_path }}/maintenance.html"
     state: absent
+    owner: "{{ steamengine_project_user }}"
+    group: "{{ steamengine_app_user }}"
+    mode: u=rwx,g=rx,o=
   tags:
     - steamengine_deploy
   when: new_build_to_deploy and steamengine_drupal_show_maintenance_page is defined and steamengine_drupal_show_maintenance_page|bool == true
