--- a/tasks/drupal/deploy.yml
+++ b/tasks/drupal/deploy.yml
@@ -33,7 +33,7 @@
     mode: u=rwx,g=rx,o=
   tags:
     - steamengine_deploy
-  when: new_build_to_deploy and steamengine_drupal_show_maintenance_page is defined and steamengine_drupal_show_maintenance_page|bool == true
+  when: new_build_to_deploy and steamengine_drupal_show_maintenance_page
 
 - name: Create tmp directory
   ansible.builtin.tempfile:
@@ -211,4 +211,4 @@
     mode: u=rwx,g=rx,o=
   tags:
     - steamengine_deploy
-  when: new_build_to_deploy and steamengine_drupal_show_maintenance_page is defined and steamengine_drupal_show_maintenance_page|bool == true
+  when: new_build_to_deploy and steamengine_drupal_show_maintenance_page
