--- a/tasks/wordpress/deploy.yml
+++ b/tasks/wordpress/deploy.yml
@@ -1,5 +1,29 @@
 ---
 
+- name: Is there a .env file
+  ansible.builtin.stat:
+    path: "{{ steamengine_conf_path }}/.env"
+  register: project_env_file_exist
+
+- name: "Create .env backup file"
+  ansible.builtin.copy:
+    src: "{{ steamengine_conf_path }}/.env"
+    dest: "{{ steamengine_conf_path }}/.env.backup"
+    owner: "{{ steamengine_project_user }}"
+    group: "{{ steamengine_app_user }}"
+    mode: u=rw,g=r,o=r
+    remote_src: yes
+  become: true
+  when: project_env_file_exist.stat.exists
+
+- name: "Create configuration file for projects"
+  ansible.builtin.template:
+    src: wordpress.env.j2
+    dest: "{{ steamengine_conf_path }}/.env"
+    owner: "{{ steamengine_project_user }}"
+    group: "{{ steamengine_app_user }}"
+    mode: u=rw,g=r,o=r
+
 - name: "Download build {{ steamengine_build_url }}"
   ansible.builtin.get_url:
     url: "{{ steamengine_build_url }}"
@@ -11,12 +35,10 @@
     headers: "{{ steamengine_build_url_headers }}"
     validate_certs: "{{ steamengine_build_url_validate_certs }}"
   register: get_url_build
-  tags:
-    - steamengine_deploy_wp
 
 - name: "Is there a new build: {{ get_url_build.changed }}"
   ansible.builtin.set_fact:
-    new_build_to_deploy: "{{ get_url_build.changed }}"
+    new_build_to_deploy: Yes
 
 - include_tasks:
     file: "include/deploy_database.yml"
@@ -24,9 +46,6 @@
       tags:
         - deploy
   when: new_build_to_deploy is defined and new_build_to_deploy and steamengine_project_dump_bdd_url is defined and steamengine_project_dump_bdd_url != ''
-  tags:
-    - steamengine_deploy_wp
-    - steamengine_deploy_database
 
 - name: Create new release directory
   ansible.builtin.file:
@@ -36,8 +55,6 @@
     group: "{{ steamengine_app_user }}"
     mode: u=rwx,g=rx,o=
   when: new_build_to_deploy is defined and new_build_to_deploy
-  tags:
-    - steamengine_deploy_wp
 
 - name: Unarchive build
   ansible.builtin.unarchive:
@@ -49,40 +66,6 @@
     group: "{{ steamengine_app_user }}"
     mode: u=rwx,g=rx,o=
   when: new_build_to_deploy is defined and new_build_to_deploy
-  tags:
-    - steamengine_deploy_wp
-
-- name: Is there a .env file
-  ansible.builtin.stat:
-    path: "{{ steamengine_conf_path }}/.env"
-  register: project_env_file_exist
-  tags:
-    - steamengine_deploy_wp
-
-- name: "Create .env backup file"
-  ansible.builtin.copy:
-    src: "{{ steamengine_conf_path }}/.env"
-    dest: "{{ steamengine_conf_path }}/.env.backup"
-    owner: "{{ steamengine_project_user }}"
-    group: "{{ steamengine_app_user }}"
-    mode: u=rw,g=r,o=r
-    remote_src: yes
-  become: true
-  when: new_build_to_deploy is defined and new_build_to_deploy and project_env_file_exist.stat.exists
-  tags:
-    - steamengine_deploy_wp
-
-- name: "Create configuration file for projects"
-  ansible.builtin.template:
-    src: wordpress.env.j2
-    dest: "{{ steamengine_conf_path }}/.env"
-    owner: "{{ steamengine_project_user }}"
-    group: "{{ steamengine_app_user }}"
-    mode: u=rw,g=r,o=r
-  when: not project_env_file_exist.stat.exists or (new_build_to_deploy is defined and new_build_to_deploy)
-  tags:
-    - steamengine_deploy_env
-    - steamengine_deploy_wp
 
 - name: Create symlink new release
   ansible.builtin.file:
@@ -94,16 +77,12 @@
     mode: u=rwx,g=rx,o=
   with_items: "{{ steamengine_project_wordpress_symlinks }}"
   when: new_build_to_deploy is defined and new_build_to_deploy
-  tags:
-    - steamengine_deploy_wp
 
 - name: "Is there a current release : {{ steamengine_project_wordpress_current_release_path }}"
   ansible.builtin.stat:
     path: "{{ steamengine_project_wordpress_current_release_path }}"
   register: project_current_release_exist
   when: new_build_to_deploy is defined and new_build_to_deploy
-  tags:
-    - steamengine_deploy_wp
 
 - name: Create current release directory
   ansible.builtin.file:
@@ -113,16 +92,12 @@
     group: "{{ steamengine_app_user }}"
     mode: u=rwx,g=rx,o=
   when: new_build_to_deploy is defined and new_build_to_deploy and not project_current_release_exist.stat.exists
-  tags:
-    - steamengine_deploy_wp
 
 - name: Clean old release directory
   ansible.builtin.file:
     path: "{{ steamengine_project_wordpress_old_release_path }}"
     state: absent
   when: new_build_to_deploy is defined and new_build_to_deploy and project_current_release_exist.stat.exists
-  tags:
-    - steamengine_deploy_wp
 
 - name: Create old release directory
   ansible.builtin.file:
@@ -132,5 +107,3 @@
     group: "{{ steamengine_app_user }}"
     mode: u=rwx,g=rx,o=
   when: new_build_to_deploy is defined and new_build_to_deploy and project_current_release_exist.stat.exists
-  tags:
-    - steamengine_deploy_wp
