--- a/tasks/wordpress/deploy.yml
+++ b/tasks/wordpress/deploy.yml
@@ -4,6 +4,8 @@
   ansible.builtin.stat:
     path: "{{ steamengine_conf_path }}/.env"
   register: project_env_file_exist
+  tags:
+    - steamengine_deploy_wp
 
 - name: "Create .env backup file"
   ansible.builtin.copy:
@@ -15,6 +17,8 @@
     remote_src: yes
   become: true
   when: project_env_file_exist.stat.exists
+  tags:
+    - steamengine_deploy_wp
 
 - name: "Create configuration file for projects"
   ansible.builtin.template:
@@ -23,6 +27,8 @@
     owner: "{{ steamengine_project_user }}"
     group: "{{ steamengine_app_user }}"
     mode: u=rw,g=r,o=r
+  tags:
+    - steamengine_deploy_wp
 
 - name: "Download build {{ steamengine_build_url }}"
   ansible.builtin.get_url:
@@ -35,10 +41,14 @@
     headers: "{{ steamengine_build_url_headers }}"
     validate_certs: "{{ steamengine_build_url_validate_certs }}"
   register: get_url_build
+  tags:
+    - steamengine_deploy_wp
 
 - name: "Is there a new build: {{ get_url_build.changed }}"
   ansible.builtin.set_fact:
-    new_build_to_deploy: Yes
+    new_build_to_deploy: "{{ get_url_build.changed }}"
+  tags:
+    - steamengine_deploy_wp
 
 - include_tasks:
     file: "include/deploy_database.yml"
@@ -46,6 +56,8 @@
       tags:
         - deploy
   when: new_build_to_deploy is defined and new_build_to_deploy and steamengine_project_dump_bdd_url is defined and steamengine_project_dump_bdd_url != ''
+  tags:
+    - steamengine_deploy_wp
 
 - name: Create new release directory
   ansible.builtin.file:
@@ -55,6 +67,8 @@
     group: "{{ steamengine_app_user }}"
     mode: u=rwx,g=rx,o=
   when: new_build_to_deploy is defined and new_build_to_deploy
+  tags:
+    - steamengine_deploy_wp
 
 - name: Unarchive build
   ansible.builtin.unarchive:
@@ -66,6 +80,8 @@
     group: "{{ steamengine_app_user }}"
     mode: u=rwx,g=rx,o=
   when: new_build_to_deploy is defined and new_build_to_deploy
+  tags:
+    - steamengine_deploy_wp
 
 - name: Create symlink new release
   ansible.builtin.file:
@@ -77,12 +93,16 @@
     mode: u=rwx,g=rx,o=
   with_items: "{{ steamengine_project_wordpress_symlinks }}"
   when: new_build_to_deploy is defined and new_build_to_deploy
+  tags:
+    - steamengine_deploy_wp
 
 - name: "Is there a current release : {{ steamengine_project_wordpress_current_release_path }}"
   ansible.builtin.stat:
     path: "{{ steamengine_project_wordpress_current_release_path }}"
   register: project_current_release_exist
   when: new_build_to_deploy is defined and new_build_to_deploy
+  tags:
+    - steamengine_deploy_wp
 
 - name: Create current release directory
   ansible.builtin.file:
@@ -92,12 +112,16 @@
     group: "{{ steamengine_app_user }}"
     mode: u=rwx,g=rx,o=
   when: new_build_to_deploy is defined and new_build_to_deploy and not project_current_release_exist.stat.exists
+  tags:
+    - steamengine_deploy_wp
 
 - name: Clean old release directory
   ansible.builtin.file:
     path: "{{ steamengine_project_wordpress_old_release_path }}"
     state: absent
   when: new_build_to_deploy is defined and new_build_to_deploy and project_current_release_exist.stat.exists
+  tags:
+    - steamengine_deploy_wp
 
 - name: Create old release directory
   ansible.builtin.file:
@@ -107,3 +131,15 @@
     group: "{{ steamengine_app_user }}"
     mode: u=rwx,g=rx,o=
   when: new_build_to_deploy is defined and new_build_to_deploy and project_current_release_exist.stat.exists
+  tags:
+    - steamengine_deploy_wp
+
+- name: Play post deploy tasks
+  ansible.builtin.include_tasks:
+    file: "wordpress/post_deploy_wp.yml"
+    apply:
+      tags:
+        - steamengine_deploy
+  when: new_build_to_deploy is defined and new_build_to_deploy
+  tags:
+    - steamengine_deploy_wp
